--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ plugins {
 
 group = 'com.infotek'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '19'
 
 configurations {
 	compileOnly {
@@ -27,6 +26,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.session:spring-session-core'
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
+	implementation 'org.springdoc:springdoc-openapi-security:1.6.9'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
